Install gegl-cpuaccel.h
Install gegl-cpuaccel.h so it can be used by external operations.

--- a/gegl/Makefile.am
+++ b/gegl/Makefile.am
@@ -60,8 +60,8 @@ GEGL_introspectable_headers =	\
 GEGL_public_HEADERS = \
 	$(GEGL_introspectable_headers) \
     gegl-plugin.h			\
-    gegl-chant.h
-
+    gegl-chant.h      \
+    gegl-cpuaccel.h
 
 GEGL_introspectable_sources = \
 	gegl-c.c			\
