--- a/gegl.pc.in
+++ b/gegl.pc.in
@@ -7,6 +7,6 @@ pluginsdir=@libdir@/@PACKAGE_NAME@-@GEGL_API_VERSION@
 Name: GEGL
 Description: Generic Graphics Library 
 Version: @GEGL_REAL_VERSION@
-Requires: @GLIB_PACKAGES@ babl poly2tri-c
+Requires: @GLIB_PACKAGES@ babl
 Libs: -L${libdir} -l@PACKAGE_NAME@-@GEGL_API_VERSION@
 Cflags: -I${includedir}/@PACKAGE_NAME@-@GEGL_API_VERSION@
