--- a/libs/poly2tri-c/poly2tri-c/p2t/common/Makefile.am
+++ b/libs/poly2tri-c/poly2tri-c/p2t/common/Makefile.am
@@ -1,2 +1,6 @@
 noinst_LTLIBRARIES = libp2tc-common.la
+
+AM_CFLAGS = $(GLIB_CFLAGS) $(P2TC_CFLAGS)
+AM_LDFLAGS = $(GLIB_LIBS)
+
 libp2tc_common_la_SOURCES = cutils.h poly2tri-private.h shapes.c shapes.h utils.c utils.h
