--- a/libs/poly2tri-c/poly2tri-c/p2t/sweep/Makefile.am
+++ b/libs/poly2tri-c/poly2tri-c/p2t/sweep/Makefile.am
@@ -1,2 +1,6 @@
 noinst_LTLIBRARIES = libp2tc-sweep.la
+
+AM_CFLAGS = $(GLIB_CFLAGS) $(P2TC_CFLAGS)
+AM_LDFLAGS = $(GLIB_LIBS)
+
 libp2tc_sweep_la_SOURCES = advancing_front.c advancing_front.h cdt.c cdt.h sweep.c sweep_context.c sweep_context.h sweep.h
