--- a/libs/poly2tri-c/poly2tri-c/refine/Makefile.am
+++ b/libs/poly2tri-c/poly2tri-c/refine/Makefile.am
@@ -1,3 +1,6 @@
 noinst_LTLIBRARIES = libp2tc-refine.la
 
+AM_CFLAGS = $(GLIB_CFLAGS) $(P2TC_CFLAGS)
+AM_LDFLAGS = $(GLIB_LIBS)
+
 libp2tc_refine_la_SOURCES = bounded-line.c bounded-line.h cdt.c cdt.h cdt-flipfix.c cdt-flipfix.h circle.c circle.h cluster.c cluster.h delaunay-terminator.c delaunay-terminator.h edge.c edge.h line.c line.h rmath.c rmath.h mesh.c mesh.h mesh-action.c mesh-action.h point.c point.h pslg.c pslg.h refine.h refiner.c refiner.h triangle.c triangle.h triangulation.h utils.c utils.h vector2.c vector2.h vedge.c vedge.h vtriangle.c vtriangle.h visibility.c visibility.h
