--- a/libs/poly2tri-c/poly2tri-c/render/Makefile.am
+++ b/libs/poly2tri-c/poly2tri-c/render/Makefile.am
@@ -1,3 +1,6 @@
 noinst_LTLIBRARIES = libp2tc-render.la
 
+AM_CFLAGS = $(GLIB_CFLAGS) $(P2TC_CFLAGS)
+AM_LDFLAGS = $(GLIB_LIBS)
+
 libp2tc_render_la_SOURCES = mesh-render.c mesh-render.h svg-plot.c svg-plot.h
