operation: Added npy save
Added save operation for the npy file format. See: (https://github.com/numpy/numpy/blob/master/doc/neps/npy-format.txt)
The operation operation saves in either "RGB float" or "Y float" depending on the input image format.

--- a/operations/external/Makefile.am
+++ b/operations/external/Makefile.am
@@ -125,6 +125,11 @@ ppm_load_la_LIBADD = $(op_libs)
 ppm_save_la_SOURCES = ppm-save.c
 ppm_save_la_LIBADD = $(op_libs)
 
+# No dependencies
+ops += npy-save.la
+npy_save_la_SOURCES = npy-save.c
+npy_save_la_LIBADD = $(op_libs)
+
 # Dependencies are in our source tree
 ops += rgbe-load.la rgbe-save.la
 rgbe_load_la_SOURCES = rgbe-load.c
