--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -52,6 +52,7 @@ operations/common/mblur.c
 operations/common/mirrors.c
 operations/common/mono-mixer.c
 operations/common/motion-blur.c
+operations/common/motion-blur-zoom.c
 operations/common/noise.c
 operations/common/noise-cielch.c
 operations/common/noise-hsv.c
