operations: add a basic motion-blur-circular operation
Inspired from the one from GIMP. It is a bit slow though.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -51,6 +51,7 @@ operations/common/matting-global.c
 operations/common/mblur.c
 operations/common/mirrors.c
 operations/common/mono-mixer.c
+operations/common/motion-blur-circular.c
 operations/common/motion-blur-linear.c
 operations/common/motion-blur-zoom.c
 operations/common/noise.c
