Murder CFLAGS before gi-r-scanner sees them
It seems that when CFLAGS exists in the environment the
Makefile's version of it leaks into the shell introspection
is running in. This causes the string to get parsed twice
and confuses the escaped \s.

Really this is a horrid hack and someone who knows more
about autotools should find the correct way to fix it.

--- a/gegl/Makefile.am
+++ b/gegl/Makefile.am
@@ -4,6 +4,7 @@
 INTROSPECTION_GIRS =
 INTROSPECTION_SCANNER_ARGS = --warn-all --add-include-path="$(srcdir)" --add-include-path="$(shell $(PKG_CONFIG) --define-variable=datadir="$(datadir)" --variable=girdir gobject-introspection-1.0)"
 INTROSPECTION_COMPILER_ARGS = --includedir="$(srcdir)" --includedir="$(shell $(PKG_CONFIG) --define-variable=datadir="$(datadir)" --variable=girdir gobject-introspection-1.0)"
+INTROSPECTION_SCANNER_ENV = CFLAGS= LDFLAGS= CXXFLAGS=
 
 if PLATFORM_WIN32
 no_undefined = -no-undefined
