Add tests for gegl_node_set/get

--- a/tests/simple/.gitignore
+++ b/tests/simple/.gitignore
@@ -5,14 +5,15 @@
 /.libs
 /Makefile
 /Makefile.in
-/test-change-processor-rect*
-/test-color-op*
+/test-change-processor-rect
+/test-color-op
 /test-exp-combine.sh
-/test-gegl-rectangle*
-/test-gegl-tile*
-/test-misc*
-/test-path*
-/test-proxynop-processing*
-/test-buffer-cast*
-/test-buffer-extract*
-/test-buffer-changes*
+/test-gegl-rectangle
+/test-gegl-tile
+/test-misc
+/test-node-properties
+/test-path
+/test-proxynop-processing
+/test-buffer-cast
+/test-buffer-extract
+/test-buffer-changes
