--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -39,6 +39,7 @@ operations/common/grid.c
 operations/common/high-pass.c
 operations/common/image-compare.c
 operations/common/introspect.c
+operations/common/invert-gamma.c
 operations/common/invert-linear.c
 operations/common/layer.c
 operations/common/lens-distortion.c
