workshop: add a better gaussian-blur implementation, work in progress
- the fir case is missing for small std-dev
- the implementation doesn't allow infinite plane input
- the ouptput extent doesn't grow anymore

--- a/operations/workshop/Makefile.am
+++ b/operations/workshop/Makefile.am
@@ -20,6 +20,8 @@ op_LTLIBRARIES =    \
 	demosaic-simple.la \
 	disc-percentile.la \
 	ditto.la \
+	gaussian-blur-iir.la \
+	gblur-1d.la \
 	hstack.la \
 	kuwahara.la \
 	linear-gradient.la \
