--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -128,6 +128,7 @@ operations/external/text.c
 operations/external/v4l.c
 operations/external/vector-fill.c
 operations/external/vector-stroke.c
+operations/external/webp-load.c
 operations/generated/add.c
 operations/generated/clear.c
 operations/generated/color-burn.c
