--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -93,6 +93,7 @@ operations/common/svg-matrix.c
 operations/common/svg-saturate.c
 operations/common/threshold.c
 operations/common/tile.c
+operations/common/tile-seamless.c
 operations/common/unsharp-mask.c
 operations/common/value-invert.c
 operations/common/vignette.c
